--- a/0-/IRC Meeting/2008-12-07/Agenda.mediawiki
+++ b/0-/IRC Meeting/2008-12-07/Agenda.mediawiki
@@ -27,6 +27,7 @@ If you cannot be present, please make sure to edit this page to add your point o
 *** For example coll2 will be painful to rebase onto rvsplit, as a lot of xmmsc_coll has been changed to xmmsv_coll, which means conflict in every other commit. Merge might be less painful if such renaming is done in some pre-merge commit. Also functions need to be updated to rvsplit. Should this be in every patch where such a change is needed, or is one patch after the rebase ok?
 **** (I believe that was why anders pushed that change as early as possible, separate from rv-split, it's in -devel.git and has been for a long time now /nano)
 **** (Let me rephrase: Is git merge okay, or is rebase obligatory? If rebase should be done, is it okay to have a section in the history where the code is broken (so that you don't have to hunt down name changes in all commits, and can make a separate namechange commit instead?)? /nesciens)
+**** (I just 'rebased' with the renaming (git format-patch; sed s/.../.../g; git am) /nesciens)
 * DrM 
 ** content (bug fixes, rvsplit, sc, nycli, coll2?)
 *** abolish add/insert_encoded methods and move url encoding to the server? (See also bug #2073)
