--- a/0-/MPRIS.mediawiki
+++ b/0-/MPRIS.mediawiki
@@ -94,6 +94,8 @@ Note that if CAN_HAS_TRACKLIST is false, the methods described below must be imp
 ==== GetMetadata ====
 Gives all meta data available for element at given position in the [[#"TrackList"|TrackList]], counting from 0.
 
+Guidelines for field names are at http://wiki.xmms2.xmms.se/wiki/MPRIS_Metadata .
+
 Each dict entry is organized as follows
 * string: Metadata item name
 * variant: Metadata value.
