/* DR Phase */ added DrNick per Anders' suggestion
Levitation import of page 1228 rev 8498.

--- a/0-/Versioning.mediawiki
+++ b/0-/Versioning.mediawiki
@@ -14,7 +14,7 @@
 * [[Release:DrKosmos|DrKosmos]] - Released 2007-11-15 (10 years!)
 * [[Release:DrLecter|DrLecter]] <s>DrLivingstone (I presume)</s> - Released 2008-06-15
 * DrMcCoy, DrMcKay, Dr. Matt Destruction, Dr Mabuse
-* DrNo
+* DrNo, DrNick
 ...
 * DrStrangelove
 ...
