add transcript link
Levitation import of page 2478 rev 8505 (minor).

--- a/0-/IRC Meeting/2008-12-07/Minutes.mediawiki
+++ b/0-/IRC Meeting/2008-12-07/Minutes.mediawiki
@@ -41,3 +41,6 @@
 ** no non-devel reference branch should be necessary
 ** Anders looks at g.x.s/merge daily on workdays. Small stuff is reviewed immediately.
 ** Buildbot makes him a bit more sloppy.
+
+== Transcript ==
+Available off-site: [http://sirius.cine7.net/tmp/xmms2-meeting-2008-12-07]
