--- a/0-/Clients.mediawiki
+++ b/0-/Clients.mediawiki
@@ -92,6 +92,7 @@ You can find lots other players in the [[Clientlist | Client matrix]]. Here are 
 
 * '''X-Chat:''' [[Client:EkoXMMS2 | EkoXMMS2]] lets you control XMMS2 within the application
 * '''irssi:''' Both [[Client:ixmms2 | ixmms2]] and [[Client:xmms2Plugin | xmms2Plugin]] provide information and control within irssi
+* '''X-Chat:''' [[Client:xmms2-xchat | xmms2-xchat]] xmms2-xchat plugin will show current playing information on X-Chat
 
 == Audioscrobbler ==
 
