added dxmms2 shell script
Levitation import of page 2228 rev 8515.

--- a/0-/Clients.mediawiki
+++ b/0-/Clients.mediawiki
@@ -84,6 +84,7 @@ You can find lots other players in the [[Clientlist | Client matrix]]. Here are 
 * [[Client:bbxmms2menu | bbxmms2menu]] is a blackbox menu with the basic controls
 * [[Client:bbkeysxmms2 | bbkeysxmms2]] a list of suggested shortcut keys for bbkeys
 * [[Client:FluxboxKeys | Fluxbox keys]] a simple list of shortcut keys for ~/.fluxbox/keys, and a way to run xmms2 at startup
+* [[Client:dxmms2 | dxmms2]] shell script that allows you to browse playlist and medialib using dmenu menubar
 
 = Integration Into Other Applications =
 
