--- a/0-/Why does XMMS2 use so much CPU.mediawiki
+++ b/0-/Why does XMMS2 use so much CPU.mediawiki
@@ -6,6 +6,7 @@ insert info here about how to
 * output plugin issues?
 ** Does it happen with "null" output plugin?
 ** Only happens with alsa? Try setting bare hw as device ("xmms2 config alsa.device hw:0" or similar)
+*** If using dmix, check if resampling is taking place. [http://blog.sarine.nl/2008/12/21/dmix-the-pain-or-mpd-high-cpu-usage More info and troubleshooting].
 * look at chain (effects, converter).
 * compilation with -O2/-Os  (+ add reasoning why it isn't default)
 * make sure medialib indexer isn't running
