Levitation import of page 2482 rev 8530 (minor).

--- a/0-/IRC Quotes/2009.mediawiki
+++ b/0-/IRC Quotes/2009.mediawiki
@@ -7,3 +7,9 @@
  06:43 < lvlefisto> it seems it is fixed now
  06:43 -!- lvlefisto [n=corleone@189.152.130.228] has left #xmms2 ["Leaving."]
  06:45 < Zharf> O_O
+
+== Archived Quotes ==
+* [[IRC Quotes/2005]]
+* [[IRC Quotes/2006]]
+* [[IRC Quotes/2007]]
+* [[IRC Quotes/2008]]
