add "location" field from other page
Levitation import of page 2407 rev 8535.

--- a/0-/MPRIS Metadata.mediawiki
+++ b/0-/MPRIS Metadata.mediawiki
@@ -2,6 +2,9 @@ Below is a proposed, minimal list of standard field names with a description of 
 
 === Informational ===
 
+==== "location" ====
+(string) Url to the media (local files are represented as a file:// url) 
+
 ==== "title" ====
 (string) Name
 
